--- a/app/src/main/res/layout/equipment_ov_maintenance_listview_itemview.xml
+++ b/app/src/main/res/layout/equipment_ov_maintenance_listview_itemview.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:minHeight="80dp">
+    android:minHeight="@dimen/equipment_ov_listview_item_min_height">
     <View
         android:id="@+id/top_divider"
         android:layout_width="match_parent"
