--- a/app/src/main/res/layout/ftragment_worker_ov_attendane_status.xml
+++ b/app/src/main/res/layout/ftragment_worker_ov_attendane_status.xml
@@ -1,33 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/worker_ov_attendance_btn_add_leave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="17dp"
+        android:background="@drawable/bg_solid_textview_bg_green"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:text="@string/worker_ov_tab_attendance_add_leave_date"
+        android:textColor="@android:color/white"
+        android:textSize="16dp" />
 
-    <RelativeLayout
+    <ListView
+        android:id="@+id/worker_ov_attendance_listview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/worker_ov_attendance_btn_add_leave"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="17dp"
-            android:background="@drawable/bg_solid_textview_bg_green"
-            android:paddingBottom="8dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="8dp"
-            android:text="@string/worker_ov_tab_attendance_add_leave_date"
-            android:textColor="@android:color/white"
-            android:textSize="16dp" />
-
-        <ListView
-            android:id="@+id/worker_ov_attendance_listview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="371dp"
-            android:divider="@null"/>
-    </RelativeLayout>
-</ScrollView>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="371dp"
+        android:divider="@null"/>
+</RelativeLayout>
