--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -130,4 +130,8 @@
     <dimen name="add_case_expected_spending_time_text_size">28dp</dimen>
     <dimen name="add_case_expected_devices_container_margin_top">40dp</dimen>
 
+    <!-- Equipment ov -->
+    <dimen name="equipment_ov_listview_item_min_height">80dp</dimen>
+    <dimen name="equipment_ov_listview_divider_height">1dp</dimen>
+
 </resources>
