--- a/app/src/main/res/layout/add_case_task_item.xml
+++ b/app/src/main/res/layout/add_case_task_item.xml
@@ -73,6 +73,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <TextView
+            android:id="@+id/add_case_task_detail_button"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
