[Overview] Reset scroll bar's position when content content or switch tab

--- a/app/src/main/res/layout/fragment_equipment_ov.xml
+++ b/app/src/main/res/layout/fragment_equipment_ov.xml
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/left_pane" />
 
-    <ScrollView
+    <com.bananaplan.workflowandroid.utility.OverviewScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toRightOf="@id/vertical_divider">
@@ -111,6 +112,6 @@
             </TabHost>
 
         </RelativeLayout>
-    </ScrollView>
+    </com.bananaplan.workflowandroid.utility.OverviewScrollView>
 
 </RelativeLayout>
