--- a/app/src/main/res/layout/fragment_case_ov.xml
+++ b/app/src/main/res/layout/fragment_case_ov.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/case_left_pane" />
 
-    <ScrollView
+    <com.bananaplan.workflowandroid.utility.OverviewScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -54,5 +54,5 @@
             </TabHost>
 
         </LinearLayout>
-    </ScrollView>
+    </com.bananaplan.workflowandroid.utility.OverviewScrollView>
 </RelativeLayout>
