--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -96,4 +96,11 @@
     <color name="add_case_add_item_background_color">#FFE1E1E1</color>
     <color name="add_case_task_item_detail_text_color">#FF428BCA</color>
 
+    <!-- Management -->
+    <color name="management_dialog_actionbar_background_color">#FF4A90E2</color>
+    <color name="management_dialog_actionbar_title_text_color">@android:color/white</color>
+    <color name="management_dialog_add_item_container_background_color">@android:color/white</color>
+    <color name="management_dialog_divider_color">#FFE1E1E1</color>
+    <color name="management_item_name_text_color">@android:color/black</color>
+
 </resources>
