--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -138,4 +138,13 @@
     <dimen name="equipment_ov_listview_item_min_height">80dp</dimen>
     <dimen name="equipment_ov_listview_divider_height">1dp</dimen>
 
+    <!-- Management -->
+    <dimen name="management_dialog_window_width">600dp</dimen>
+    <dimen name="management_dialog_window_height">500dp</dimen>
+    <dimen name="management_dialog_actionbar_title_text_size">20dp</dimen>
+    <dimen name="management_dialog_add_edit_text_width">150dp</dimen>
+    <dimen name="management_item_height">50dp</dimen>
+    <dimen name="management_item_padding">13dp</dimen>
+    <dimen name="management_item_name_text_size">20dp</dimen>
+
 </resources>
