--- a/app/src/main/res/menu/menu_management.xml
+++ b/app/src/main/res/menu/menu_management.xml
@@ -2,10 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
-    <item android:id="@+id/edit" android:title="Edit"
+    <item android:id="@+id/edit" android:title="@string/edit"
         android:orderInCategory="1" app:showAsAction="ifRoom" />
 
-    <item android:id="@+id/dismiss" android:title="Dismiss" android:icon="@drawable/ic_clear"
+    <item android:id="@+id/dismiss" android:title="@string/cancel" android:icon="@drawable/ic_clear"
         android:orderInCategory="2" app:showAsAction="ifRoom" />
 
 </menu>
