--- a/app/src/main/res/layout/fragment_assign_task.xml
+++ b/app/src/main/res/layout/fragment_assign_task.xml
@@ -47,8 +47,8 @@
             <Button
                 android:id="@+id/worker_action_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|right"
+                android:layout_height="39dp"
+                android:layout_gravity="top|left"
                 android:text="@string/worker_action_start" />
 
             <android.support.v4.view.ViewPager
