[AssignTask] Refactory task/worker item to task/worker card

--- a/app/src/main/res/layout/warning_textview_layout.xml
+++ b/app/src/main/res/layout/warning_textview_layout.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/taskitem_listview_warning"
+    android:id="@+id/task_card_warning"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
