--- a/app/src/main/res/layout/ov_taskitem_list_view_itemview_equipment.xml
+++ b/app/src/main/res/layout/ov_taskitem_list_view_itemview_equipment.xml
@@ -126,11 +126,11 @@
                 android:layout_marginLeft="15.4dp"
                 android:gravity="center_vertical">
                 <ImageView
-                    android:id="@+id/worker_avatar"
+                    android:id="@+id/worker_card_avatar"
                     android:layout_width="24dp"
                     android:layout_height="24dp" />
                 <TextView
-                    android:id="@+id/worker_name"
+                    android:id="@+id/worker_card_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
