--- a/app/src/main/res/layout/task_card.xml
+++ b/app/src/main/res/layout/task_card.xml
@@ -3,24 +3,24 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/task_item_background">
+    android:background="@drawable/task_card_background">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/task_item_part1_height"
+        android:layout_height="@dimen/task_card_part1_height"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/task_title"
+            android:id="@+id/task_card_title"
             style="@style/TaskItemTextStyle"
             android:textColor="@color/task_case_text_color"
-            android:textSize="@dimen/task_item_title_text_size"/>
+            android:textSize="@dimen/task_card_title_text_size"/>
 
         <include
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             layout="@layout/warning_textview_layout"
-            android:layout_marginLeft="@dimen/task_item_padding"
+            android:layout_marginLeft="@dimen/task_card_padding"
             android:layout_marginBottom="5dp"/>
 
     </LinearLayout>
@@ -28,11 +28,11 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/task_item_divider_color" />
+        android:background="@color/task_card_divider_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/task_item_part2_height"
+        android:layout_height="@dimen/task_card_part2_height"
         android:orientation="vertical">
 
         <LinearLayout
@@ -44,11 +44,11 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/current_task_working_time"
+                android:id="@+id/task_card_current_task_working_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/task_case_text_color"
-                android:textSize="@dimen/task_item_content_text_size"/>
+                android:textSize="@dimen/task_card_content_text_size"/>
 
         </LinearLayout>
 
@@ -61,11 +61,11 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/task_tool"
+                android:id="@+id/task_card_equipment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/task_case_text_color"
-                android:textSize="@dimen/task_item_content_text_size"/>
+                android:textSize="@dimen/task_card_content_text_size"/>
 
         </LinearLayout>
 
@@ -78,11 +78,11 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/task_worker"
+                android:id="@+id/task_card_worker"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/task_case_text_color"
-                android:textSize="@dimen/task_item_content_text_size"/>
+                android:textSize="@dimen/task_card_content_text_size"/>
 
         </LinearLayout>
 
@@ -95,11 +95,11 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:id="@+id/task_status"
+                android:id="@+id/task_card_status"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/task_case_text_color"
-                android:textSize="@dimen/task_item_content_text_size"/>
+                android:textSize="@dimen/task_card_content_text_size"/>
 
         </LinearLayout>
 
