--- a/app/src/main/res/drawable/task_item_warning_background.xml
+++ b/app/src/main/res/drawable/task_item_warning_background.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke
-        android:width="@dimen/worker_card_stroke_width"
-        android:color="@color/common_block_stroke_color" />
+    <corners android:radius="@dimen/task_item_warning_corner_radius" />
+    <solid android:color="@color/task_item_background_color" />
 
 </shape>
