--- a/app/src/main/res/drawable/worker_task_content_background.xml
+++ b/app/src/main/res/drawable/worker_task_content_background.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="@dimen/task_card_warning_corner_radius" />
-    <solid android:color="@color/task_card_background_color" />
+    <stroke
+        android:width="@dimen/worker_item_stroke_width"
+        android:color="@color/common_block_stroke_color" />
 
 </shape>
