--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,19 +51,19 @@
     </style>
 
     <style name="TaskCaseTextStyle.TaskItemTitle">
-        <item name="android:textSize">@dimen/task_card_title_text_size</item>
+        <item name="android:textSize">@dimen/task_item_title_text_size</item>
     </style>
 
     <style name="TaskCaseTextStyle.TaskItemContent">
-        <item name="android:textSize">@dimen/task_card_content_text_size</item>
+        <item name="android:textSize">@dimen/task_item_content_text_size</item>
     </style>
 
     <style name="TaskItemTextStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:paddingLeft">@dimen/task_card_padding</item>
-        <item name="android:paddingRight">@dimen/task_card_padding</item>
+        <item name="android:paddingLeft">@dimen/task_item_padding</item>
+        <item name="android:paddingRight">@dimen/task_item_padding</item>
         <item name="android:gravity">center_vertical</item>
     </style>
 
