--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -8,6 +8,7 @@
     <integer name="task_container_weight">3</integer>
     <integer name="task_case_column_count">2</integer>
     <integer name="worker_gridview_column_count">3</integer>
+    <integer name="assign_task_drag_and_drop_highlight_stroke_width">4</integer>
 
     <!-- Add case -->
     <integer name="add_case_left_part_weight">1</integer>
